--- a/src/components/UserPages/UserHomePage.css
+++ b/src/components/UserPages/UserHomePage.css
@@ -2,3 +2,11 @@ img {
     border-radius: 8px;
     width: 20em;
   }
+
+  .content-container {
+    margin-left: 4%;
+  }
+
+  .home-welcome-message {
+    margin-left: 4%;
+  }
