--- a/src/components/recipe/RecipeDetails.css
+++ b/src/components/recipe/RecipeDetails.css
@@ -1,3 +1,23 @@
+.recipe-details-container {
+    margin-left: 4%;
+    margin-right: 4%;
+    background-color:rgba(255, 255, 255, 0.594);
+    border-radius: 7px;
+    padding-top: 3px;
+    padding-bottom: 8px;
+    padding-left: 3%;
+}
+
 .recipe-details-button-container {
     display: inline;
+    
+}
+
+.recipe-details-name {
+    font-size: 55px;
+    margin-top: 19px;
+}
+
+.recipe-details-image {
+    margin-top: 20px;
 }
