--- a/src/components/FilmToFridge.css
+++ b/src/components/FilmToFridge.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@400;700&display=swap');
+
 body {
     background: linear-gradient(to bottom, #ffdf78 0%, #ff6633 100%);
     padding-top: 125px;
