--- a/src/components/recipe/FeaturedRecipes.css
+++ b/src/components/recipe/FeaturedRecipes.css
@@ -10,7 +10,8 @@
 }
 
 .featured-recipe-title {
-    font-size: 350%;
+    font-size: 300%;
+    font-family: 'Fredoka One', display;
     margin-top: 2%;
     margin-bottom: 2%;
     color: #ff6633;
