--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,18 +1,3 @@
-
-/* a:link {
-    text-decoration: none;
-  }
-  
-  a:visited {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  a:hover {
-    text-decoration: none;
-    color: green;
-  }
-  
-  a:active {
-    text-decoration: underline;
-  } */
+.homepage-login-icon {
+  width: 40px;
+}
